--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "sass": "^1.44.0"
+    "sass": "^1.44.0",
+    "swr": "^1.1.1"
   },
   "devDependencies": {
     "eslint": "8.4.1",
