--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "next": "12.0.7",
     "next-images": "^1.8.4",
     "react": "17.0.2",
